[workspace]
members = [
"library/bfm/ahb4",
"library/bfm/apb4",
"library/bfm/axi4",
"library/bfm/bb",
"library/bfm/biu",
"library/bfm/wb",
"library/core/ahb4",
"library/core/apb4",
"library/core/axi4",
"library/core/bb",
"library/core/biu",
"library/core/wb",

"application/bfm/ahb4",
"application/bfm/apb4",
"application/bfm/axi4",
"application/bfm/bb",
"application/bfm/biu",
"application/bfm/wb",
"application/core/ahb4",
"application/core/apb4",
"application/core/axi4",
"application/core/bb",
"application/core/biu",
"application/core/wb"
]
